# Boggle-Game

./: .gitignore  BoggleBoard.cs  BoggleSolver.cs  Extensions.cs  Program.cs  README.md  Readme.md  Trie.cs  TrieSearchSession.cs  docker-compose.yml
BoggleGame/: BoardExplorer.cs  BoggleBoard.cs  BoggleBoardPath.cs  BoggleFileRepository.cs  BoggleGame.csproj  BoggleGamePath.cs  BoggleSolver.cs  Constants.cs  Extensions.cs  Program.cs  Trie.cs  TrieNode.cs  TrieSearchSession.cs  Utils.cs
BoggleGame.Api/: BoggleGame.Api.csproj  Program.cs  appsettings.json
BoggleGame.Client/: BoggleGame.Client.csproj  Program.cs  _Imports.razor
BoggleGame.Dto/: BoggleGamePath.cs
BoggleGame.Tests/: BoggleBoardBasicTests.cs  BoggleFileRepositoryTests.cs  BoggleGame.Tests.csproj  BoggleSolverBasicTests.cs  BoggleTestHelper.cs  TestCollection.cs  TestFixture.cs  Usings.cs  appsettings.json
boggle-board-generator/: Cargo.toml  Dockerfile  README.Docker.md  Readme.md
boggle-board-generator/src/: board.rs  boggle_generate_service.rs  boggle_service.rs  boggle_solver_service.rs  dictionary.rs  genetic_algo_board.rs  genetic_board.rs  main.rs
boggle-board-generator/src/dictionary/: trie.rs
boggle-game/: auth.ts  middleware.ts  package-lock.json  package.json
boggle-game-app/: Dockerfile  Readme.md  auth.config.ts  auth.ts  middleware.ts  package-lock.json  package.json  pnpm-lock.yaml
boggle-game-server/: Dockerfile  package-lock.json  package.json
boggle-game-sync/: Dockerfile  package-lock.json  package.json
boggle-session-server/: Dockerfile  package-lock.json  package.json  (+1 more)
(+140 files in other folders)
