[package]
name = "boggle-board-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
boggle-maker = "0.1.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.44.2"
